--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Cairo+Play:wght@200..1000&display=swap" rel="stylesheet" />
-        <link rel="stylesheet" href="/src/styles.css" />
+        <link rel="stylesheet" href="/src/globalStyles.css" />
     </head>
     <body>
         <div id="root"></div>
